<resources>
    <string name="app_name">Accounting</string>
    <string name="action_settings">Settings</string>
    <string name="login">로그인</string>
    <string name="cost_management">경비관리</string>
    <string name="cost_request">경비신청</string>
    <string name="where">사용처</string>
    <string name="default_place">스타벅스 종로점</string>
    <string name="how_much">사용금액</string>
    <string name="when">사용일자</string>
    <string name="memo">적요(메모)</string>
    <string name="account">계정</string>
    <string name="receipt">영수증</string>
    <string name="cost_detail">상세보기</string>
    <string name="state1">반려</string>
    <string name="newinfo">회원가입</string>
    <string name="common_text_confirm">확인</string>
    <string name="common_text_error">오류</string>
</resources>
